updated swag
